# bmi160-rs

./: Cargo.toml
src/: lib.rs  register.rs
