[package]
name = "bmi160"
description = "Platform-agnostic BMI160 accelerometer driver which uses I2C via embedded-hal"
version = "0.1.0"
authors = ["Chris Bruce <chris@chrisbruce.com>"]
license     = "Apache-2.0"
repository  = "https://github.com/bionicbits/bmi160-rs"
readme      = "README.md"
edition     = "2018"
categories  = ["embedded", "no-std"]
keywords    = ["bosch", "accelerometer"]

[dependencies]
embedded-hal = "0.2"
bitflags = "1"
